--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       media="(prefers-color-scheme: dark)"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex,follow" />
+    <meta name="robots" content="noindex,nofollow" />
     <title>File-Inspector</title>
   </head>
   <body>
